Uncommented the "visibility:hidden" for the account-info style. THis is a temporary fix to allow Kirk to test with FB login.

--- a/html/css/skooply.css
+++ b/html/css/skooply.css
@@ -246,8 +246,8 @@ header {
    width:250px;
   */
   
-   /*border:solid 1px #E0E0D5;*/
-   visibility:hidden;
+   /*border:solid 1px #E0E0D5;
+   visibility:hidden;*/
    height:50px;
    width:250px;
    top:15px;
